# agent-control-plane

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.agents/skills/agent-control-plane/: SKILL.md
.agents/skills/agent-control-plane/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/homunculus/instincts/inherited/: agent-control-plane-instincts.yaml
.codex/: AGENTS.md
.github/: dependabot.yml
.github/workflows/: desktop-release.yml  release.yml  validate.yml
agents/: claude-code.agent.yaml  codex.agent.yaml
configs/repos/: example.repo.yaml
desktop/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: architecture.md  memory-model.md  roadmap.md  safety.md
scripts/: bump_version.sh  validate.sh
skills/: RefactorDatabase.yaml  SecurityReview.yaml
src/acp/: __init__.py  cli.py  config.py  egress.py  egress_proxy.py  errors.py  events.py  io_utils.py  legacy_loop.py  models.py  store.py  subtask.py
src/acp/agents/: __init__.py  agent_file.py  agent_registry.py  base.py  cli_agent.py  registry.py  shell_agent.py
src/acp/api/: __init__.py  server.py
src/acp/context/: __init__.py  context_builder.py  haystack_indexer.py  scanner.py
src/acp/evidence/: __init__.py  durable_store.py  durable_task_store.py  lifecycle.py  manifest.py  migrations.py
src/acp/executor/: __init__.py  firecracker.py  gvisor.py  openhands.py  protocol.py  sbx.py  seatbelt.py  venv_executor.py
src/acp/federation/: __init__.py  client.py  transport.py
src/acp/gitops/: branches.py  diff.py  merge.py  worktrees.py
src/acp/graph/: __init__.py  nodes.py  state.py  workflow.py
src/acp/memory/: __init__.py  graphiti_client.py  promotion_rules.py  tiers.py
src/acp/missions/: __init__.py  orchestrator.py  store.py
src/acp/reports/: templates.py  writer.py
src/acp/review/: diff_reviewer.py  gates.py  risk.py  secret_scanner.py
src/acp/skills/: __init__.py  enforcement.py  loader.py
src/acp/streaming/: __init__.py  midstream.py  secret_stream_scanner.py
src/acp/testing/: parsers.py  runner.py
src/acp/vault/: approval.py  frontmatter.py  obsidian_writer.py
tests/: conftest.py  test_agent_isolation.py  test_agent_registry.py  test_agent_swap.py  test_analysis_fixes.py  test_api.py  test_approval.py  test_approval_evidence_regression.py  test_autonomous_mode.py  test_base_commit_diff.py  test_cli_agent_shell_safety.py  test_cli_agent_streaming.py  test_command_timeout.py  test_config_validators.py  test_context_builder.py  test_dogfood_fixture.py  test_durable_store.py  test_durable_task_store.py  test_e2e_manual_loop.py  test_early_failure_evidence.py  test_egress.py  test_event_signing.py  test_events.py  test_evidence_binding.py  test_evidence_config.py  test_evidence_integrity.py  test_federation.py  test_federation_transport_errors.py  test_fixes_and_edges.py  test_frontmatter.py  test_gate_logic.py  test_gitops_diff.py  test_gitops_merge.py  test_gitops_worktrees.py  test_graph_sentinel_abort.py  test_gvisor_executor.py  test_hardening.py  test_layer0_schema.py  test_memory_promotion.py  test_memory_prune.py  (+31 more)
ui/: .oxlintrc.json  package-lock.json  package.json  vite.config.ts
ui/src/: App.css  App.tsx  DiffViewer.tsx  MemorySearch.tsx  MissionDetail.tsx  MissionForm.tsx  MissionList.tsx  RunForm.tsx  Skills.tsx  TaskDetail.tsx  TaskList.tsx  api.ts
vault/decisions/: ADR-0001-use-langgraph.md  ADR-0002-use-graphiti-falkordb.md  ADR-0003-use-obsidian-as-review-surface.md
vault/rules/: coding-agent-rules.md  memory-promotion-rules.md  review-gates.md  worktree-safety.md
