[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-control-plane"
version = "0.5.15"
description = "Mac-first local control plane for coding agents: isolate, run, capture, review, report."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [{ name = "Dawson Block" }]
keywords = ["agents", "control-plane", "langgraph", "evidence", "obsidian"]

# v0.1 dependency set only. Later milestones add:
#   v0.2 langgraph, v0.3 haystack-ai, v0.4 graphiti-core[falkordb],
#   v0.5 fastapi + uvicorn.
dependencies = [
    # typer >=0.15 is required for click 8.4 compatibility
    # (older typer calls Parameter.make_metavar() without the ctx arg that
    # click 8.4 made mandatory, which breaks --help on every command).
    "typer>=0.15,<1",
    "pydantic>=2.7,<3",
    "pyyaml>=6.0,<7",
    "rich>=13.7,<16",
    "gitpython>=3.1,<4",
    # LangGraph is the default runtime engine — the graph is the primary
    # execution path. Kept as a core dependency rather than optional since
    # the CLI defaults to graph mode (v0.5+).
    "langgraph>=1.2,<2",
]

[project.optional-dependencies]
# v0.5: LangGraph moved to core deps. This group is kept for backwards
# compatibility but is now a no-op (all deps are in core).
graph = [
    "langgraph>=1.2,<2",
]
# v0.5.6: Ed25519 event-log signing (authenticity proofs).
# Kept as a separate extra for operators who want signing in production
# without pulling in pytest. The `dev` extra below also includes it so the
# documented validation path (`uv sync --extra dev && bash scripts/validate.sh`)
# works exactly as written — the signing tests are part of the gate.
crypto = [
    "cryptography>=43,<46",
]
dev = [
    "pytest>=8.2,<9",
    "cryptography>=43,<46",
]

[project.scripts]
acp = "acp.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/acp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"
