[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-control-plane"
version = "0.7.1"
description = "Mac-first local control plane for coding agents: isolate, run, capture, review, report."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = "MIT"
authors = [{ name = "Dawson Block" }]
keywords = ["agents", "control-plane", "langgraph", "evidence", "obsidian"]

# v0.1 dependency set only. Later milestones add:
#   v0.2 langgraph, v0.3 haystack-ai, v0.4 graphiti-core[falkordb],
#   v0.5 fastapi + uvicorn.
dependencies = [
    # typer >=0.15 is required for click 8.4 compatibility
    # (older typer calls Parameter.make_metavar() without the ctx arg that
    # click 8.4 made mandatory, which breaks --help on every command).
    "typer>=0.15,<1",
    "pydantic>=2.7,<3",
    "pyyaml>=6.0,<7",
    "rich>=13.7,<16",
    "gitpython>=3.1,<4",
    # LangGraph is the default runtime engine — the graph is the primary
    # execution path. Kept as a core dependency rather than optional since
    # the CLI defaults to graph mode (v0.5+).
    "langgraph>=1.2,<2",
]

[project.optional-dependencies]
# v0.5: LangGraph moved to core deps. This group is kept for backwards
# compatibility but is now a no-op (all deps are in core).
graph = [
    "langgraph>=1.2,<2",
]
# v0.5.6: Ed25519 event-log signing (authenticity proofs).
# Kept as a separate extra for operators who want signing in production
# without pulling in pytest. The `dev` extra below also includes it so the
# documented validation path (`uv sync --extra dev && bash scripts/validate.sh`)
# works exactly as written — the signing tests are part of the gate.
crypto = [
    "cryptography>=43,<50",
]
dev = [
    "pytest>=8.2,<9",
    "pytest-cov>=4.1,<7",
    "cryptography>=43,<50",
    "ruff>=0.6,<1",
    "mypy>=1.11,<2",
    "types-PyYAML>=6.0,<7",
]
# v0.6.0 (M6): Local Haystack RAG context retrieval.
# Optional — install with: uv sync --extra rag
# Uses sentence-transformers for local, air-gapped embeddings (no API calls).
# Note: haystack-ai 2.30+ requires sentence-transformers 3.0+ (the
# `local_files_only` parameter was added in 3.0.0).
rag = [
    "haystack-ai>=2.0,<3",
    "sentence-transformers>=3.0,<5",
]
# v0.6.2 (M7): Graphiti temporal memory via FalkorDB.
# Optional — install with: uv sync --extra memory
# Requires a running FalkorDB instance: docker run -p 6379:6379 falkordb/falkordb
# Graphiti also needs an LLM for entity extraction — set OPENAI_API_KEY or
# configure a custom LLM client (see src/acp/memory/graphiti_client.py).
memory = [
    "graphiti-core[falkordb]>=0.5,<1",
]
# v0.6.5 (M10): FastAPI HTTP control layer.
# Optional — install with: uv sync --extra api
# Start the server with: acp serve --config configs/repos/example.repo.yaml
api = [
    "fastapi>=0.100,<1",
    "uvicorn[standard]>=0.20,<1",
]
# v0.7.4: Durable LangGraph checkpointing via SQLite.
# Optional — install with: uv sync --extra checkpoint
# When configured, workflow state persists across process restarts,
# enabling crash recovery for long-running agent tasks.
checkpoint = [
    "langgraph-checkpoint-sqlite>=2.0,<3",
]
# v0.7.4: Post-quantum event signatures (ML-DSA, FIPS 204).
# Optional — install with: uv sync --extra mldsa
# Requires OpenSSL 3.5+, AWS-LC, or BoringSSL. When installed, operators
# can configure evidence.signature_algorithm to mldsa44/mldsa65/mldsa87
# for quantum-resistant event-log authenticity proofs.
mldsa = [
    "cryptography>=49,<50",
]
# Note: crypto and dev extras use cryptography>=43,<50 so they are compatible
# with the mldsa extra (which requires >=49). When both are installed, the
# newer version wins. ML-DSA APIs are only available with >=49 + OpenSSL 3.5+.

[project.scripts]
acp = "acp.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/acp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"

# --------------------------------------------------------------------------- #
# Ruff — linter + formatter (replaces flake8 --select=F).
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# F  = pyflakes (undefined names, unused imports, redefinitions)
# E  = pycodestyle errors
# W  = pycodestyle warnings
# I  = isort (import sorting)
# UP = pyupgrade (modernize syntax for py312)
select = ["F", "E", "W", "I", "UP"]
# E501  = line-too-long — now enforced (line-length = 100 above).
# UP042 = replace-str-enum — changes class hierarchy (str, Enum → StrEnum);
#         behavioral edge cases, defer until audited.
# BLE001 is used intentionally throughout for broad exception handlers that
# are documented as best-effort. We manage those with inline `# noqa: BLE001`
# comments rather than enabling the rule globally.
ignore = ["UP042"]

[tool.ruff.lint.isort]
known-first-party = ["acp"]

[tool.ruff.lint.per-file-ignores]
# Tests may use short variable names in fixtures.
"tests/**" = ["E741"]

# --------------------------------------------------------------------------- #
# Mypy — static type checking.
# Strict mode is enforced. All functions must have type annotations, no
# implicit Any returns, and missing import stubs are errors (install
# types-PyYAML via the `dev` extra).
# --------------------------------------------------------------------------- #
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = false
# LangGraph state uses Any intentionally (opaque to the framework).
[[tool.mypy.overrides]]
module = "acp.graph.state"
disable_error_code = ["attr-defined"]
# Optional extras — not installed in every environment (e.g. CI without
# --extra rag --extra memory). These modules are imported lazily inside
# try/except ImportError guards, so missing stubs are expected.
[[tool.mypy.overrides]]
module = ["graphiti_core.*", "haystack.*", "sentence_transformers.*", "gitdb.*"]
ignore_missing_imports = true

# --------------------------------------------------------------------------- #
# Coverage — measure test coverage of src/acp.
# --------------------------------------------------------------------------- #
[tool.coverage.run]
source = ["src/acp"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 75
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
