[package]
name = "acp-desktop"
version = "0.7.1"
description = "Agent Control Plane Desktop Wrapper"
authors = ["ACP"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
