[package]
name = "acp-desktop"
version = "0.7.5"
description = "Agent Control Plane Desktop Wrapper"
authors = ["ACP"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
